--- a/requirements.txt
+++ b/requirements.txt
@@ -1,254 +1,180 @@
-absl-py==2.0.0
-aiohttp==3.8.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-altgraph==0.17.3
-anyio==3.6.2
-argon2-cffi==21.3.0
+absl-py==2.1.0
+accelerate==1.7.0
+annotated-types==0.7.0
+anyio==4.8.0
+argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asgiref==3.6.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==22.2.0
-auto-py-to-exe==2.28.0
-awscli==1.29.62
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-boto3==1.28.62
-botocore==1.31.62
-bottle==0.12.23
-bottle-websocket==0.2.9
-branca==0.6.0
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.4
-comm==0.1.3
-contourpy==1.0.7
-coreapi==2.3.3
-coreschema==0.0.4
-coverage==7.2.7
-cycler==0.11.0
-debugpy==1.6.7
+arrow==1.3.0
+asgiref==3.8.1
+asttokens==3.0.0
+async-lru==2.0.4
+attrs==25.1.0
+babel==2.17.0
+beautifulsoup4==4.13.3
+bitsandbytes==0.46.0
+bleach==6.2.0
+blinker==1.9.0
+branca==0.8.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+clarabel==0.10.0
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cvxpy==1.6.1
+cycler==0.12.1
+debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
-dictionary==1.0
-discord.py==2.1.0
-Django==4.1.6
-django-cors-headers==4.2.0
-django-filter==22.1
-django-grappelli==3.0.5
-django-location-field==2.7.0
-django-phonenumber-field==7.1.0
-django-tastypie==0.14.6
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-docker==6.1.3
-docutils==0.16
-drf-yasg==1.21.5
-Eel==0.14.0
-executing==1.2.0
-fastjsonschema==2.17.1
-filelock==3.12.0
-Fiona==1.9.4.post1
-flatbuffers==23.5.26
-folium==0.14.0
-fonttools==4.39.4
+Django==5.2
+django-cors-headers==4.7.0
+django-phonenumber-field==8.1.0
+django-restframework==0.0.1
+djangorestframework==3.16.0
+dm-tree==0.1.9
+docstring_parser==0.16
+einops==0.8.1
+etils==1.12.2
+executing==2.2.0
+fastapi==0.115.12
+fastjsonschema==2.21.1
+filelock==3.17.0
+Flask==3.1.0
+folium==0.20.0
+fonttools==4.55.3
 fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2023.5.0
-future==0.18.3
-gast==0.5.4
-gensim==4.3.1
-geocoder==1.38.1
-geographiclib==2.0
-geopandas==0.14.0
-geopy==2.4.0
-gevent==22.10.2
-gevent-websocket==0.10.1
-google-api-core==2.11.0
-google-api-python-client==2.85.0
-google-auth==2.17.3
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.59.0
-googlemaps==4.10.0
-greenlet==2.0.2
-grpcio==1.59.0
-gtfs-functions==2.0.8
-h5py==3.10.0
-httplib2==0.22.0
-huggingface-hub==0.15.1
-idna==3.4
-inflection==0.5.1
-iniconfig==2.0.0
-ipykernel==6.23.1
-ipython==8.13.2
-ipython-genutils==0.2.0
+fsspec==2025.2.0
+geographiclib==2.1
+geopy==2.4.1
+googleapis-common-protos==1.70.0
+graphviz==0.20.3
+gurobipy==12.0.1
+h11==0.14.0
+hf-xet==1.1.3
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.32.4
+idna==3.10
+immutabledict==4.2.1
+importlib_resources==6.5.2
+ipykernel==6.29.5
+ipython==8.32.0
 isoduration==20.11.0
-itypes==1.2.0
-jaraco.classes==3.3.0
-jedi==0.18.2
-jenkspy==0.3.3
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-keras==2.14.0
-keyring==8.7
-keyrings.alt==5.0.0
-Kivy==2.2.1
-kivy-deps.angle==0.3.3
-kivy-deps.glew==0.3.1
-kivy-deps.sdl2==0.6.0
-Kivy-Garden==0.1.5
-kiwisolver==1.4.4
-libclang==16.0.6
-Markdown==3.4.1
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mistune==2.0.5
-ml-dtypes==0.2.0
-more-itertools==10.1.0
-multidict==6.0.4
-nbclassic==1.0.0
-nbclient==0.8.0
-nbconvert==7.4.0
-nbformat==5.8.0
-nest-asyncio==1.5.6
-nltk==3.8.1
-notebook==6.5.4
-notebook_shim==0.2.3
-numpy==1.24.3
-oauth2client==4.1.3
-oauthlib==3.2.2
-opencv-python==4.8.0.76
-opencv-python-headless==4.8.1.78
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.5.1
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.5
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+kagglehub==0.3.12
+kiwisolver==1.4.8
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mistune==3.1.1
+mpmath==1.3.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+notebook==7.3.2
+notebook_shim==0.2.4
+numpy==2.2.2
 openrouteservice==2.3.3
-opt-einsum==3.3.0
-packaging==23.1
-pandas==2.0.1
-pandocfilters==1.5.0
-parso==0.8.3
-pefile==2022.5.30
-pendulum==2.1.2
-phonenumbers==8.13.20
-phonenumberslite==8.13.20
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.5.1
-plotly==5.17.0
-pluggy==1.0.0
-plyer==2.1.0
-pprintpp==0.4.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-protobuf==4.22.3
-psutil==5.9.5
-psycopg2==2.9.6
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycountry==22.3.5
-pycountry-convert==0.7.2
-pycparser==2.21
-PyDrive==1.3.1
-Pygments==2.15.1
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.15
-PyJWT==2.6.0
-pyparsing==3.0.9
-pypiwin32==223
-pyproj==3.6.0
-pyrsistent==0.19.3
-pytest==7.3.1
-pytest-cov==4.1.0
-pytest-mock==3.10.0
-python-dateutil==2.8.2
-python-decouple==3.8
-python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-mimeparse==1.6.0
-pytz==2022.7.1
-pytzdata==2020.1
-pywin32==306
-pywin32-ctypes==0.2.0
-pywinpty==2.0.10
-PyYAML==6.0
-pyzmq==25.0.2
-ratelim==0.1.6
-regex==2023.5.5
-repoze.lru==0.7
-requests==2.28.2
-requests-oauthlib==1.3.1
+osqp==0.6.7.post3
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+phonenumbers==9.0.13
+pillow==11.1.0
+platformdirs==4.3.6
+prometheus_client==0.21.1
+promise==2.3
+prompt_toolkit==3.0.50
+protobuf==5.29.3
+psutil==6.1.1
+pure_eval==0.2.3
+pyarrow==20.0.0
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+Pygments==2.19.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-json-logger==3.2.1
+pytz==2025.1
+pywin32==308
+pywinpty==2.0.15
+PyYAML==6.0.2
+pyzmq==26.2.1
+qdldl==0.1.7.post5
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rsa==4.7.2
-ruamel.yaml==0.17.24
-ruamel.yaml.clib==0.2.7
-s3transfer==0.7.0
-scikit-learn==1.2.2
-scipy==1.10.1
-Send2Trash==1.8.2
-shapely==2.0.1
-six==1.16.0
-smart-open==6.3.0
-sniffio==1.3.0
-soupsieve==2.4.1
-sqlparse==0.4.3
-stack-data==0.6.2
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.1
-tensorflow==2.14.0
-tensorflow-estimator==2.14.0
-tensorflow-intel==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tokenizers==0.13.3
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.29.2
-twilio==8.8.0
-typing_extensions==4.6.3
-tzdata==2022.7
-unicode==2.9
-uri-template==1.2.0
-uritemplate==4.1.1
-urllib3==1.26.15
-utm==0.7.0
-validate-email==1.3
-voluptuous==0.13.1
-wcwidth==0.2.6
-webcolors==1.13
+rpds-py==0.22.3
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.2
+scs==3.2.7.post2
+seaborn==0.13.2
+Send2Trash==1.8.3
+setuptools==80.9.0
+simple-parsing==0.1.7
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+sqlparse==0.5.3
+stack-data==0.6.3
+starlette==0.46.2
+sympy==1.13.1
+tensorflow-metadata==1.17.1
+termcolor==3.1.0
+terminado==0.18.1
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+toml==0.10.2
+torch==2.6.0+cu118
+torchaudio==2.6.0+cu118
+torchvision==0.21.0+cu118
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.52.4
+types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.1
+uri-template==1.3.0
+urllib3==2.3.0
+uvicorn==0.34.2
+validate-email-address==1
+validate_email==1.3
+wcwidth==0.2.13
+webcolors==24.11.1
 webencodings==0.5.1
-websocket-client==1.5.2
-Werkzeug==3.0.0
-whichcraft==0.6.1
-wordcloud==1.9.2
-wrapt==1.14.1
-yarl==1.8.2
-yolo==0.3.1
-zope.event==4.6
-zope.interface==5.5.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
+xyzservices==2025.4.0
+zipp==3.22.0
+
